<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.instigate.aggregator06.SignInActivity"
    android:id="@+id/signInPage">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/signInHeader"
        android:id="@+id/signInHeader"
        android:textStyle="bold"
        android:textSize="48sp"


        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/user"
        android:inputType="none"
        android:textSize="24sp"
        android:hint="@string/username"

        android:layout_below="@+id/signInHeader"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/pass"
        android:textSize="24sp"
        android:hint="@string/password"

        android:layout_below="@+id/user"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/signInButton"
    android:id="@+id/signInButton"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="confirm"/>

    <!--android:onClick="goToSelectSNPage"-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backbtn4"
        android:id="@+id/backbtn4"
        android:onClick="backToSN2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="52dp" />


</RelativeLayout>
